--- a/index.html
+++ b/index.html
@@ -1,185 +1,221 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>CAMS Hacks</title>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="CAMS Hacks is the California Academy of Mathematics and Science's 24 hour hackathon, held in Carson, California."/>
-      <meta name="keywords" content="CAMS, California Academy of Mathematics and Science, Hackathon, Hackathon Carson California, CAMSHACKS, CAMS HACKS" />
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <!-- Fonts -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-      <!-- Body font -->
-      <!--Stylesheets-->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-      <link rel="stylesheet" href="css/main.css">
-   </head>
-   <body>
-      <!-- Nav -->
-      <nav class="navbar navbar-custom navbar-fixed-top">
-         <div class="container">
+
+<head>
+    <title>CAMS Hacks</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="CAMS Hacks is the California Academy of Mathematics and Science's 24 hour hackathon, held in Carson, California." />
+    <meta name="keywords" content="CAMS, California Academy of Mathematics and Science, Hackathon, Hackathon Carson California, CAMSHACKS, CAMS HACKS" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Fonts -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <!-- Body font -->
+    <!--Stylesheets-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+    <!-- Nav -->
+    <nav class="navbar navbar-custom navbar-fixed-top">
+        <div class="container">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-collapse" style="color:white;">
-               <span class="sr-only">Toggle navigation</span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="#" id="nav-logo">CAMSHACKS</a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-collapse" style="color:white;">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#" id="nav-logo">CAMSHACKS</a>
             </div>
-            <div class="collapse navbar-collapse" style="color:white" id = "nav-collapse">
-               <ul class="nav navbar-nav navbar-right" style="color:white">
-                  <li><a href = "#faq" class="white-text">FAQ</a></li>
-                  <li><a href="" onclick='' class="white-text">PARTNER</a></li>
-                  <li><a class="white-text">REGISTER</a></li>
-               </ul>
+            <div class="collapse navbar-collapse" style="color:white" id="nav-collapse">
+                <ul class="nav navbar-nav navbar-right" style="color:white">
+                    <li><a href="#faq" class="white-text">FAQ</a></li>
+                    <li><a href="" onclick='' class="white-text">PARTNER</a></li>
+                    <li><a class="white-text">REGISTER</a></li>
+                </ul>
             </div>
-         </div>
-      </nav>
-      <!-- Video Background-->
-      <div class="hero">
-         <div class="container">
+        </div>
+    </nav>
+    <!-- Video Background-->
+    <div class="hero">
+        <div class="container">
             <!--LOGO (Placeholder)-->
-            <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id = "img-logo" />
+            <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id="img-logo" />
             <h1 class="center white-text">CAMSHacks</h1>
-            <h3 class="center white-text" id = "hero-subtext">CSUDH Gym | February 24-25, 2017.</h3>
+            <h3 class="center white-text" id="hero-subtext">CSUDH Gym | February 24-25, 2017.</h3>
             <a class="btn btn-blank page-scroll" role="button">APPLY</a>
             <a href="#about" class="scroll-down" address="true"></a>
-         </div>
-      </div>
-      <!--About-->
-      <div id = "about">
-         <div class="container">
+        </div>
+    </div>
+    <!--About-->
+    <div id="about">
+        <div class="container">
             <h1 class="text-center title">ABOUT</h1>
-            <center><hr class="text-center"></center>
-            <p class="text-center light" id = "about-text">
-               CAMS Hacks is a 24 hour hackathon held by students from the California Academy of Mathematics, located in the gym of the California State University, Dominguez Hills (CSUDH) campus. Here, you will work with other high school students to build awesome stuff. Come out and hack with us!
+            <center>
+                <hr class="text-center">
+            </center>
+            <p class="text-center light" id="about-text">
+                CAMS Hacks is a 24 hour hackathon held by students from the California Academy of Mathematics, located in the gym of the California State University, Dominguez Hills (CSUDH) campus. Here, you will work with other high school students to build awesome stuff. Come out and hack with us!
             </p>
-         </div>
-      </div>
-      <!--Apply-->
-      <div class="belizeHole" id = "apply">
+        </div>
+    </div>
+    <!--Apply-->
+    <div class="belizeHole" id="apply">
         <div id="apply-subtext">
-          <h1 class="white-text text-center">APPLY</h1>
-          <center><hr class="text-center"></center>
-          <h4 class="white-text text-center" id = "notifyHeading">
+            <h1 class="white-text text-center">APPLY</h1>
+            <center>
+                <hr class="text-center">
+            </center>
+            <h4 class="white-text text-center" id="notifyHeading">
             Be notified when applications open.
           </h4>
-           <center><a class="btn btn-blank page-scroll" role="button" style = "">APPLY</a></center>
-          <!--TODO: Add the actual button lol (MailChimp)-->
+            <!-- Begin MailChimp Signup Form -->
+            <div id="mc_embed_signup">
+                <form action="//camshacks.us14.list-manage.com/subscribe/post?u=7e2d92c7672acd8ec310d10d0&amp;id=5abca39d14" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll">
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                            <input type="text" name="b_7e2d92c7672acd8ec310d10d0_5abca39d14" tabindex="-1" value="">
+                        </div>
+                        <div class="row">
+
+                            <div class="form-group col-md-8">
+                                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
+                            </div>
+
+                            <div class="clear col-md-4">
+                                <center>
+                                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                                </center>
+                            </div>
+                        </div>
+
+                    </div>
+                </form>
+            </div>
+
+            <!--End mc_embed_signup-->
         </div>
-      </div>
-      <!--FAQ-->
-      <div id = "faq">
-         <div class="container">
+    </div>
+    <!--FAQ-->
+    <div id="faq">
+        <div class="container">
             <h1 class="text-center title" style="padding-top:0;">FAQ</h1>
-            <center><hr class="text-center"></center>
+            <center>
+                <hr class="text-center">
+            </center>
             <div class="row">
-               <div class="col-sm-4">
-                  <div class="card card-block">
-                     <h4 class="card-title">Q: Who can come to CAMS Hacks?</h4>
-                     <p class="card-text">Any high schooler (grades 9-12) can apply to and participate at the event. However, even if you have already graduated, you can still come to mentor!</p>
-                  </div>
-               </div>
-               <div class="col-sm-4">
-                  <div class="card card-block">
-                     <h4 class="card-title">Q: What should I bring?</h4>
-                     <p class="card-text">For security purposes, we require you to bring your student ID or equivalent indentification. Make sure to bring your laptops, phones, chargers, etc. Also, we recommend you bring sleeping bags, power strips, and toiletries.</p>
-                  </div>
-               </div>
-               <div class="col-sm-4">
-                  <div class="card card-block">
-                     <h4 class="card-title">Q: What if I am a CAMS Student?</h4>
-                     <p class="card-text">If you are a CAMS student, there is no need for application, just show up to the event with your student ID card!</p>
-                  </div>
-               </div>
+                <div class="col-sm-4">
+                    <div class="card card-block">
+                        <h4 class="card-title">Q: Who can come to CAMS Hacks?</h4>
+                        <p class="card-text">Any high schooler (grades 9-12) can apply to and participate at the event. However, even if you have already graduated, you can still come to mentor!</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card card-block">
+                        <h4 class="card-title">Q: What should I bring?</h4>
+                        <p class="card-text">For security purposes, we require you to bring your student ID or equivalent indentification. Make sure to bring your laptops, phones, chargers, etc. Also, we recommend you bring sleeping bags, power strips, and toiletries.</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card card-block">
+                        <h4 class="card-title">Q: What if I am a CAMS Student?</h4>
+                        <p class="card-text">If you are a CAMS student, there is no need for application, just show up to the event with your student ID card!</p>
+                    </div>
+                </div>
             </div>
             <div class="row">
-               <div class="col-sm-4">
-                  <div class="card card-block">
-                     <h4 class="card-title">Q: What if I can't code?</h4>
-                     <p class="card-text">That's fine! We will have mentors and workshops to assist you in coding your dream programs.</p>
-                  </div>
-               </div>
-               <div class="col-sm-4">
-                  <div class="card card-block">
-                     <h4 class="card-title">Q: Do I have to stay inside of the building at all times? </h4>
-                     <p class="card-text">We recommend that you do, but if necessary, you may leave the building.</p>
-                  </div>
-               </div>
-               <div class="col-sm-4">
-                  <div class="card card-block">
-                     <h4 class="card-title">Q: Who is in charge of CAMS Hacks?</h4>
-                     <p class="card-text">CAMS Hacks is run by students at the California Academy of Mathematics and Science.</p>
-                  </div>
-               </div>
+                <div class="col-sm-4">
+                    <div class="card card-block">
+                        <h4 class="card-title">Q: What if I can't code?</h4>
+                        <p class="card-text">That's fine! We will have mentors and workshops to assist you in coding your dream programs.</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card card-block">
+                        <h4 class="card-title">Q: Do I have to stay inside of the building at all times? </h4>
+                        <p class="card-text">We recommend that you do, but if necessary, you may leave the building.</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card card-block">
+                        <h4 class="card-title">Q: Who is in charge of CAMS Hacks?</h4>
+                        <p class="card-text">CAMS Hacks is run by students at the California Academy of Mathematics and Science.</p>
+                    </div>
+                </div>
             </div>
-          <div class="row">
-             <div class="col-sm-4">
-                <div class="card card-block">
-                   <h4 class="card-title">Q: How many people can be in a team?</h4>
-                   <p class="card-text">There is a limit of 4 members per team. If you do not already have a team, we will have team-forming sessions at the start of the event!</p>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card card-block">
+                        <h4 class="card-title">Q: How many people can be in a team?</h4>
+                        <p class="card-text">There is a limit of 4 members per team. If you do not already have a team, we will have team-forming sessions at the start of the event!</p>
+                    </div>
                 </div>
-             </div>
-             <div class="col-sm-4">
-                <div class="card card-block">
-                   <h4 class="card-title">Q: What is the cost of attending CAMS Hacks?</h4>
-                   <p class="card-text">Absolutely free! Also, meals and snacks are provided, so have no fear of getting hungry!</p>
+                <div class="col-sm-4">
+                    <div class="card card-block">
+                        <h4 class="card-title">Q: What is the cost of attending CAMS Hacks?</h4>
+                        <p class="card-text">Absolutely free! Also, meals and snacks are provided, so have no fear of getting hungry!</p>
+                    </div>
                 </div>
-             </div>
-             <div class="col-sm-4">
-                <div class="card card-block">
-                   <h4 class="card-title">Q: My question was unanswered here. Where can I ask?</h4>
-                   <p class="card-text">Feel free to email us at <a href="mailto:contact@camshacks.org">contact@camshacks.org</a>!. We will try responding as soon as we can.</p>
+                <div class="col-sm-4">
+                    <div class="card card-block">
+                        <h4 class="card-title">Q: My question was unanswered here. Where can I ask?</h4>
+                        <p class="card-text">Feel free to email us at <a href="mailto:contact@camshacks.org">contact@camshacks.org</a>!. We will try responding as soon as we can.</p>
+                    </div>
                 </div>
-             </div>
-          </div>
-         </div>
-      </div>
-      <div class="belizeHole" id = "sponsor">
+            </div>
+        </div>
+    </div>
+    <div class="belizeHole" id="sponsor">
         <div>
             <h1 class="white-text text-center">SPONSOR</h1>
-            <center><hr></center>
+            <center>
+                <hr>
+            </center>
             <h4 class="white-text text-center">
               Interested in sponsorship? Email us at <a href="mailto:sponsor@camshacks.org" class="white-text">sponsorship@camshacks.org</a>
             </h4>
             <!--Row with Sponsorship Infomration-->
             <center>
-              <a class="btn btn-blank text-center">SPONSOR</a>
-          </center>
+                <a class="btn btn-blank text-center belizeHole-text">SPONSOR</a>
+            </center>
         </div>
-      </div>
-      <div id = "organizers">
+    </div>
+    <div id="organizers">
         <h1 class="text-center">ORGANIZERS</h1>
-        <center><hr class="text-center"></center>
+        <center>
+            <hr class="text-center">
+        </center>
         <div class="row">
-          <!--Image Cards with Name on Hover-->
+            <!--Image Cards with Name on Hover-->
         </div>
-      </div>
-      <div id="footer">
+    </div>
+    <div id="footer">
         <div class="container">
-          <div class="text-center">
-            <a href="#">
-              <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
-            </a>
-            <a href="#">
-              <i class="fa fa-facebook-square	fa-2x" aria-hidden="true"></i>
-            </a>
-            <a href="#">
-              <i class="fa fa-twitter-square fa-2x" id="last-icon" aria-hidden="true"></i>
-            </a>
-          </div>
-          <center>
-            <p class = "white-text">2016 | CAMSHacks</p>
-          </center>
+            <div class="text-center">
+                <a href="#">
+                    <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                </a>
+                <a href="#">
+                    <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+                </a>
+                <a href="#">
+                    <i class="fa fa-twitter-square fa-2x" id="last-icon" aria-hidden="true"></i>
+                </a>
+            </div>
+            <center>
+                <p class="white-text">2016 | CAMSHacks</p>
+            </center>
         </div>
-      </div>
-      <!-- Scripts -->
-      <script src="js/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <script type="text/javascript" src = "js/main.js"></script>
+    </div>
+    <!-- Scripts -->
+    <script src="js/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 
-   </body>
+</body>
+
 </html>
