--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body id = "top">
     <!-- Nav -->
     <nav class="navbar navbar-custom navbar-fixed-top">
         <div class="container">
@@ -29,13 +29,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#" id="nav-logo">CAMSHACKS</a>
+                <a class="navbar-brand" href="#top" id="nav-logo">CAMSHACKS</a>
             </div>
             <div class="collapse navbar-collapse" style="color:white" id="nav-collapse">
                 <ul class="nav navbar-nav navbar-right" style="color:white">
+                    <li><a href="#about" class="white-text">ABOUT</a></li>
+                    <li><a href = "#apply" class="white-text">REGISTER</a></li>
                     <li><a href="#faq" class="white-text">FAQ</a></li>
-                    <li><a href="" onclick='' class="white-text">PARTNER</a></li>
-                    <li><a class="white-text">REGISTER</a></li>
+                    <li><a href="#sponsor" class="white-text">SPONSOR</a></li>
                 </ul>
             </div>
         </div>
