--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </h4>
             <!--Row with Sponsorship Infomration-->
             <center>
-                <a class="btn btn-blank text-center belizeHole-text">SPONSOR</a>
+                <a class="btn btn-blank text-center white-text">SPONSOR</a>
             </center>
         </div>
     </div>
