--- a/index.html
+++ b/index.html
@@ -187,12 +187,28 @@
     </div>
     <div id="organizers">
         <h1 class="text-center">ORGANIZERS</h1>
-        <center>
-            <hr class="text-center">
-        </center>
         <div class="row">
-            <!--Image Cards with Name on Hover-->
+        <div class="container">
+          <center>
+            <div class="col-xs-4">
+              <img src="isaacaddis.png" height = "150px" class="circle-image ">
+              <h4 class = "center-text">ISAAC ADDIS</h4>
+              <p class="center-text condensed-p">Co-Executive Director</p>
+            </div>
+            <div class="col-xs-4">
+              <img src="http://placehold.it/128x128" height = "150px" class="circle-image">
+              <h4 class = "center-text">KEVIN PHO</h4>
+              <p class="center-text condensed-p">Co-Executive Director</p>
+            </div>
+            <div class="col-xs">
+              <img src="http://placehold.it/128x128" height = "150px" class="circle-image">
+              <h4 class = "center-text">KENTARO VADNEY</h4>
+              <p class="center-text condensed-p"></p>
+            </div>
+          </center>
+        </div>          
         </div>
+
     </div>
     <div id="footer">
         <div class="container">
