--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <div class="hero">
         <div class="container">
             <!--LOGO (Placeholder)-->
-            <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id="img-logo" />
-            <h1 class="center white-text">CAMSHacks</h1>
-            <h3 class="center white-text" id="hero-subtext">CSUDH Gym | February 24-25, 2017.</h3>
+<!--             <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id="img-logo" />
+ -->            <h1 class="center white-text">CAMSHacks</h1>
+            <h3 class="center white-text" id="hero-subtext">CSUDH Gym | March 25-26, 2017</h3>
             <a class="btn btn-blank page-scroll" role="button">APPLY</a>
             <a href="#about" class="scroll-down" address="true"></a>
         </div>
