--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Fonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!-- Body font -->
     <!--Stylesheets-->
@@ -42,13 +41,16 @@
         </div>
     </nav>
     <!-- Video Background-->
-    <div class="hero">
+    <div class="hero background-tint">
         <div class="container">
             <!--LOGO (Placeholder)-->
-<!--             <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id="img-logo" />
- -->            <h1 class="center white-text">CAMSHacks</h1>
-            <h3 class="center white-text" id="hero-subtext">CSUDH Gym | March 25-26, 2017</h3>
-            <a class="btn btn-blank page-scroll" role="button">APPLY</a>
+<!--             <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id="img-logo" />-->
+<!--             <img src="transparent_logo2.png" class = "center-block">
+
+ -->        
+            <h1 class="center white-text">CAMSHacks</h1>
+            <h3 class="center-text white-text" id="hero-subtext">CSUDH Gym | March 25-26, 2017</h3>
+            <a class="btn btn-blank page-scroll center-text" href = "#apply" role="button" id = "applybutton">BE NOTIFIED</a>
             <a href="#about" class="scroll-down" address="true"></a>
         </div>
     </div>
