Add logo and button font

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Fonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!-- Body font -->
     <!--Stylesheets-->
@@ -45,11 +46,11 @@
         <div class="container">
             <!--LOGO (Placeholder)-->
 <!--             <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id="img-logo" />-->
-<!--             <img src="transparent_logo2.png" class = "center-block">
+            <img src="logo.png" class = "center-block" height = "500px" width = "500px">
 
- -->        
-            <h1 class="center white-text">CAMSHacks</h1>
-            <h3 class="center-text white-text" id="hero-subtext">CSUDH Gym | March 25-26, 2017</h3>
+        
+<!--             <h1 class="center white-text">CAMSHacks</h1>
+ -->        <h3 class="center-text white-text" id="hero-subtext">CSUDH Gym | March 25-26, 2017</h3>
             <a class="btn btn-blank page-scroll center-text" href = "#apply" role="button" id = "applybutton">BE NOTIFIED</a>
             <a href="#about" class="scroll-down" address="true"></a>
         </div>
